--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mwc713"
-version = "4.4.0"
+version = "5.3.1"
 authors = ["vault713 devs"]
 description = "A wallet that makes it easy to send, store, and swap MWC."
 keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
@@ -17,73 +17,52 @@ path = "src/zip/main.rs"
 
 [dependencies]
 serde = "1"
-dont_disappear = "3.0.0"
 serde_derive = "1"
 serde_json = "1"
-path-clean = "0.1.0"
-toml = "0.4"
-clap = "2"
-ansi_term = "0.11"
-nanoid = "0.1.3"
+path-clean = "1"
 colored = "1.6"
-ws = { version = "0.8", features = ["nativetls"] }
-native-tls = { version = "0.2", features = ["vendored"] }
-dirs = "1.0.3"
-futures = "0.1"
-tokio = "0.1.22"
-rand = "0.6"
-sha2 = "0.7"
-digest = "0.7"
-failure = "0.1"
-uuid = { version = "0.7", features = ["serde", "v4"] }
-ring = "0.16"
-prettytable-rs = "0.7"
-# Requesting gotham 0.4 for tls support
-rustls = "0.16"
-mime = "0.3"
-chrono = { version = "0.4.4", features = ["serde"] }
+toml = "0.5"
+clap = { version = "2.33", features = ["yaml"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
 blake2-rfc = "0.2"
 log = "0.4"
-env_logger = "0.6.0"
-url = "1.7"
+url = "2.1"
 parking_lot = {version = "0.10"}
-semver = "0.9"
 commands = "0.0.5"
 enquote = "1.0"
-reqwest = "0.9.22"
-lazy_static = "1"
 zip = { version = "0.5", features = ["deflate"] }
 ed25519-dalek = "1.0.0-pre.4"
+thiserror = "1"
 
 # Release
-#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "4.4.2" }
-#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.4.0" }
-#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.4.0" }
-#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.4.0" }
-#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.4.0" }
-#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.4.0" }
-#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "4.4.0" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.1" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.1" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.1" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.1" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.1" }
+grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.1" }
 
 # For bleeding edge
-grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api"}
@@ -102,6 +81,9 @@ grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = 
 
 # OS specific dependencies
 [target.'cfg(not(target_os = "android"))'.dependencies]
-rustyline = "5.0"
-rpassword = "2.1.0"
+rustyline = "6"
+rpassword = "4.0"
+dirs = "2.0"
 
+[target.'cfg(target_os = "windows")'.dependencies]
+ansi_term = "0.11"
