--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,34 +35,34 @@ ed25519-dalek = "1.0.0-pre.4"
 thiserror = "1"
 
 # Release
-#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2" }
-#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
-#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
-#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
-#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
-#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
-#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.2" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "5.3.2.2" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.3" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.3" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.3" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.3" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.3" }
+grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "5.3.3" }
 
 # For bleeding edge
-grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
-grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
+#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "5.3.100" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api"}
